// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing LevelButton component renders correctly 1`] = `
<styled.button
  as={[Function]}
  onClick={[Function]}
  to={
    Object {
      "pathname": "/apps/card-memory-game/play",
      "search": "?level=casual",
    }
  }
>
  casual
</styled.button>
`;

exports[`Testing LevelButton component should change a game level after a click 1`] = `
<styled.button
  as={[Function]}
  onClick={[Function]}
  to={
    Object {
      "pathname": "/apps/card-memory-game/play",
      "search": "?level=medium",
    }
  }
>
  medium
</styled.button>
`;
